fixed select items not showing properly

--- a/components/misc/Styles.module.scss
+++ b/components/misc/Styles.module.scss
@@ -505,6 +505,15 @@
 }
 
 /////////// VILLAGE SEARCH ////////////
+
+.select_with_search {
+	position: relative;
+}
+
+.village_dropdown_village {
+	bottom: 8rem;
+}
+
 .not_found, .village_dropdown {
 	background: #FFFFFF;
 	border-radius: 16px;
@@ -513,9 +522,10 @@
 	box-shadow: 0px 4px 13px rgba(2, 106, 32, 0.05);
 	position: absolute;
 	width: 100%;
+	// top: 50px;
 	z-index: 100;
 	z-index: 100;
-	height: 25rem;
+	height: 20rem;
 	overflow-y: scroll;
 	color: var(--text-color-4);
 
